style: put gap on buttons and fixed preview overflow

--- a/src/pages/Cms/css/preview.module.css
+++ b/src/pages/Cms/css/preview.module.css
@@ -25,6 +25,10 @@
     font-weight: 700;
 }
 
+.text--center {
+    text-align: center;
+}
+
 .opacity--08 {
     opacity: 0.8;
 }
@@ -36,21 +40,23 @@
     gap: 1rem;
 }
 
-.post, .comment {
+.post {
     display: grid;
     place-content: center;
-    grid-template-columns: repeat(auto-fill, minmax(500px, 100%));
     gap: 2rem;
     width: 100%;
     max-width: 50%;
     padding: 2rem;
-
+    margin-bottom: 2rem;
 }
+
+
+
 
 .post__cover {
     display: flex;
     justify-content: center;
-    height: 200px;
+    height: 10rem;
 }
 
 .cover--image {
@@ -66,6 +72,12 @@
 .post__tags {
     display: flex;
     gap: 1rem;
+}
+
+.post__body {
+    display: grid;
+    gap: 1rem;
+    font-size: 1.5rem;
 }
 
 .comment__count {
@@ -87,10 +99,10 @@
 }
 
 @media (max-width: 1200px) {
-    .mw-90 {
-        max-width: 90%;
+    .mw-100 {
+        max-width: 100%;
     }
-    .w-90 {
-        width: 90%;
+    .w-100 {
+        width: 100%;
     }
 }
